--- a/client/src/app/components/admin/leftSideBar/leftSidebar.scss
+++ b/client/src/app/components/admin/leftSideBar/leftSidebar.scss
@@ -5,4 +5,27 @@
     min-height: 100vh;
     height: 100%;
     background-color: vars.$bg-secondary;
+    display: flex;
+    flex-direction: column;
+    padding-top: 1rem;
+
+    .btnManage {
+        width: 90%;
+        height: 3rem;
+        background-color: vars.$bg-primary;
+        margin-bottom: 1rem;
+        border-radius: 3rem;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        padding-left: 2rem;
+        text-decoration: none;
+        color: white;
+
+        &.active {
+            background-color: white;
+            color: vars.$bg-primary;
+            font-weight: 600;
+        }
+    }
 }
